--- a/src/components/Homepage/Banner/Banner.css
+++ b/src/components/Homepage/Banner/Banner.css
@@ -1,17 +1,17 @@
-img {
+.bannerimg {
     width:  100%;
     height: 500px;
     margin: auto;
     object-fit: cover;
   }
 
-  h1{
+ .bannerh1{
     font-size: 40px;
     
     color: #fff;
   }
 
-  p{
+ .bannerp{
     font-size: 20px;
     color: #fff;
 
