--- a/src/components/Homepage/Services/Services.css
+++ b/src/components/Homepage/Services/Services.css
@@ -4,6 +4,10 @@
     grid-gap: 20px;
 }
 
+.servicesh1{
+    font-size: 40px;
+}
+
 /* Make it responsive */
 @media only screen and (max-width:688px) {
     .service-container{
